[package]
name = "jsonrpc-filter"
version = "0.4.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]
edition = "2018"
exclude = [
    "LICENSE",
    "allowed.txt"
]

[[bin]]
name = "jsonrpc-filter"
test = true

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
futures = "0.3.1"
hyper = {version = "0.13"}
tokio = { version = "0.2", features = ["full"] }
log = "0.4.6"
pretty_env_logger = "0.3.0"
serde = "1.0.90"
serde_json = "1.0.39"
